feat(agent-core): implement persistent thread management, generative ui registry, and chat interface
- Implemented PostgresSaver for LangGraph checkpoint persistence
- Setup LangGraph orchestrator and server actions for agent invocation
- Created Generative UI Registry for tool output mapping
- Added Chat UI component and Agent dashboard page
- Fixed ESLint issues and updated progress documentation

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@hookform/resolvers": "^5.2.2",
     "@langchain/community": "^1.1.19",
     "@langchain/core": "^1.1.28",
+    "@langchain/langgraph": "^1.1.5",
+    "@langchain/langgraph-checkpoint": "^1.0.0",
     "@langchain/openai": "^1.2.10",
+    "@modelcontextprotocol/sdk": "^1.27.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
     "clsx": "^2.1.1",
