--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@langchain/anthropic": "^1.3.20",
     "@langchain/community": "^1.1.19",
     "@langchain/core": "^1.1.28",
     "@langchain/langgraph": "^1.1.5",
@@ -20,6 +21,7 @@
     "@supabase/supabase-js": "^2.97.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
+    "json-schema-to-zod": "^2.7.0",
     "langchain": "^1.2.27",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
@@ -27,6 +29,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.2",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6"
   },
