--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@langchain/langgraph": "^1.1.5",
     "@langchain/langgraph-checkpoint": "^1.0.0",
     "@langchain/openai": "^1.2.10",
+    "@langchain/textsplitters": "^1.0.1",
     "@modelcontextprotocol/sdk": "^1.27.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
+    "drizzle-zod": "^0.8.3",
     "json-schema-to-zod": "^2.7.0",
     "langchain": "^1.2.27",
     "lucide-react": "^0.575.0",
